# Foxio_Agent1

./: .gitignore  test_full_e2e.py
.amazonq/rules/: Rules.md
Agent_1(browser_use+Playwright)/: .gitignore  README.md  pyproject.toml  requirements.txt
Agent_1(browser_use+Playwright)/examples/: run_agent1.py  run_full_pipeline.py  test_full_e2e.py
Agent_1(browser_use+Playwright)/src/langgraph_browser_agent/: __init__.py  agent.py  agent2.py  browser_helpers.py  browser_pool.py  cache.py  config.py  graph.py  llm.py  logger.py  models.py  nodes.py  pipeline.py  security.py  state.py  video_converter.py  video_merger.py
Agent_2(AI_Video_Generation)/: README.md  generate_tutorial.py  main.py  requirements.txt  test_pipeline.py  test_single_clip.py
Agent_2(AI_Video_Generation)/adapters/: base.py  grok_adapter.py
Agent_2(AI_Video_Generation)/config/: settings.py
Agent_2(AI_Video_Generation)/core/: __init__.py
Agent_2(AI_Video_Generation)/graph/: workflow.py
Agent_2(AI_Video_Generation)/nodes/: __init__.py  step_splitter.py  utils.py  video_generator.py  video_processor.py  video_splitter.py
langgraph_browser_use/: .env.example  .env.template  .gitignore  README.md  requirements.txt
langgraph_browser_use/examples/: run_agent1.py  run_agent2_standalone.py  run_full_pipeline.py  test_navigate_only.py
video_clips/: page@fb406d3f580f6359c75534deeb9504e8.webm  step_01_2d50cff4.webm
video_pipeline/: .env.example  .gitignore  README.md  generate_tutorial.py  main.py
video_pipeline/adapters/: __init__.py  grok_adapter.py
video_pipeline/config/: settings.py
(+27 files in other folders)
