[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent1-clm-analyzer"
version = "0.2.0"
description = "Agent 1 — Analyzes CLM/SaaS platforms via browser automation and Azure OpenAI-powered DOM analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "langgraph>=0.2.76",
  "langchain-core>=0.3.0",
  "openai>=1.35.0",
  "playwright>=1.48.0",
  "pydantic>=2.0.0",
  "python-dotenv>=1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["langgraph_browser_agent*"]
